# bonsai-cuda-pt

./: .gitmodules  CMakeLists.txt  CMakePresets.json
assets/: cbox.mini
src/: camera.h  main.cpp  ray.h
src/objects/: bounds.h  bvh.h  bvh_build.cpp  bvh_build.h  hit_record.h  object.h  object_list.h  sphere.h  triangle.h
src/rays/: camera.h  materials.h
src/render/: render_cpu.cpp  render_kernel.cu  trace_ray.h
src/util/: cuda_errors.h  file.h  image.h  random.cu  random.h  random_declarations.h
